[tool.poetry]
name = "polysynergy_node_runner"
version = "0.1.0"
description = "Base package for nodes and running node flows"
authors = ["Dion Snoeijen"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.39.6"
pubnub = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"