[tool.poetry]
name = "polysynergy_node_runner"
version = "0.1.0"
description = "Base package for nodes and running node flows"
authors = ["Dion Snoeijen"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.39.6"
redis = "^6.2.0"
jinja2 = "^3.1.6"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"